- Bug #1227: CActiveRecord::resetScope doesn't work with default scope (Sam Dark)
- Enh #1158: Added translations in Latvian (lafriks)
- Enh #1166: Added CActiveRecord::setOldPrimaryKey (Qiang)
- Enh #1174: AR's count() now generates more reasonable SQL statement when 'group' option is specified (Qiang)
- Enh #1179: Added CMultiFileUpload::file (Qiang)
- Enh #1183: Added support to retrieve the currently active table alias in AR scopes (Qiang)
- Enh #1188: Removed exception message display in production mode when a DB connection fails to improve security (Qiang)
- Enh #1189: Added $loadedOnly parameter to CModule::getComponents() so that it can return all application components including unloaded ones (Qiang)
- Enh #1199: AR's count() method now respects the 'select' option in the query criteria (Qiang)
- Enh #1202: Added support for using anonymous functions as component property values (Qiang)
- Enh #1203: Gii now respects the newDirMode and newFileMode settings even when lower umask is set (Qiang)
- Enh #1225: Added 'firstError' option to CHtml::errorSummary() to support displaying only the first error message of each model attribute (Qiang)
- Enh #1232: RBAC will not suppress errors in bizRule when in debug mode (Qiang)
- Enh: Added support for using array-typed model attributes in active methods in CHtml (Qiang)
- Enh: Added beforeValidate, afterValidate, beforeValidateAttribute and afterValidateAttribute options to CActiveForm (Qiang)
- Enh: Changed @var declarations to class @property declarations in gii and yiic shell model templates (Sam Dark)
- Enh: IDE code completion for CActiveRecord::attributes (Sam Dark)

Version 1.1.2 May 2, 2010
-------------------------
- Bug #676, 891: merging criterias with parameters is impossible (Sam Dark)
- Bug #1006: Setting CForm::attributes may cause exception (Qiang)
- Bug #1007: CActiveForm did not update the validation result correctly when change of one attribute affects the validity of another (Qiang)